Build out of portfolio page. Renaming of classes, cleanup

--- a/header.html
+++ b/header.html
@@ -1,5 +1,5 @@
 <header>
-    <div class="header-inner">
+    <div class="header-inner flex">
         <section class="brand">
             <a href="index.html"><img src="assets/img/d10logocopy.png" alt="logo"></a>
             <aside class="logo-text">
