--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="container-fluid">
             <div id="header"></div>
             <header> <!-- TODO: DELETE WHEN DEPLOYED! -->
-                <div class="header-inner">
+                <div class="header-inner flex">
                     <section class="brand">
                         <img src="assets/img/d10logocopy.png" alt="logo">
                         <aside class="logo-text">
