--- a/portfolio.html
+++ b/portfolio.html
@@ -36,20 +36,25 @@
             <div id="header"></div>
 
             <div class="row">
-                <section class="about-intro">
-                    <h1 class="uppercase">Our Clients</h1>
-                    <hr>
-                    <section class="clients">
-                        <div class="client">
-                            <!-- <img src="assets/img/targetBullsEye_200x200.png" alt=""> -->
+                <section class="client-intro">
+                    <h1 class="uppercase">A Handful of Happy Clients</h1>
+                    <hr style="width: 450px;">
+                    <section class="clients flex">
+                        <div class="client target">
                         </div>
-                        <div class="client">
-                            <!-- <img src="assets/img/targetBullsEye_200x200.png" alt=""> -->
+                        <div class="client kexp">
                         </div>
-                        <div class="client">
-                            <!-- <img src="assets/img/targetBullsEye_200x200.png" alt=""> -->
+                        <div class="client cush-wake">
                         </div>
-                        <div class="client">
+                        <div class="client seattle-bank">
+                        </div>
+                        <div class="client jll">
+                        </div>
+                        <div class="client nor-cruise">
+                        </div>
+                        <div class="client hcl">
+                        </div>
+                        <div class="client king-county">
                         </div>
                     </section>
                     <p class="subtext"></p>
