--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
 			<div id="header"></div>
 
 			<header> <!-- TODO: DELETE WHEN DEPLOYED! -->
-                <div class="header-inner">
+                <div class="header-inner flex">
                     <section class="brand">
                         <img src="assets/img/d10logocopy.png" alt="logo">
                         <aside class="logo-text">
