PhotoSwipe library added for portfolio page

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                           <img src="assets/img/kexp-wall.jpg" />
                         </li>
                         <li>
-                          <img src="assets/img/chiefsealth.jpg" />
+                          <img src="assets/img/chiefsealth2.jpg" />
                         </li>
                         <li>
                           <img src="assets/img/hcl.jpg" />
