--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
                             <li><a href="index.html">Home</a></li>
                             <li><a href="about.html">About Us</a></li>
                             <li>References</li>
-                            <li>Portfolio</li>
+                            <li><a href="portfolio.html">Portfolio</a></li>
                             <li>Labels/Printing</li>
                             <li>Decorated Apparel</li>
                             <li class="contact-us">Contact Us</li>
