Page layouts done, profiles on About page complete, gallery near complete

--- a/footer.html
+++ b/footer.html
@@ -12,7 +12,10 @@
     </section>
     <section class="social col-md-4">
         <i class="fa fa-envelope-o" aria-hidden="true"></i>
-        <i class="fa fa-bath" aria-hidden="true"></i>
+        <i class="fa fa-facebook" aria-hidden="true"></i>
+        <i class="fa fa-instagram" aria-hidden="true"></i>
+        <i class="fa fa-twitter" aria-hidden="true"></i>
+
     </section>
     <section class="legal col-md-12">&copy; D10Signs | American Marketing</section>
 </section>
