--- a/header.html
+++ b/header.html
@@ -13,11 +13,11 @@
             <ul class="nav-list-items">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
-                <li>References</li>
+                <!-- <li>References</li> -->
                 <li><a href="portfolio.html">Portfolio</a></li>
-                <li>Labels/Printing</li>
-                <li>Decorated Apparel</li>
-                <li class="contact-us">Contact Us</li>
+                <li><a href="labels-printing.html">Labels/Printing</a></li>
+                <!-- <li>Decorated Apparel</li> -->
+                <li class="contact-us"><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
 
