Updated address in footer and Google map

--- a/footer.html
+++ b/footer.html
@@ -1,10 +1,12 @@
 <section class="footer"> <!-- TODO: Footer is not containing iFrame content -->
     <section class="col-md-4">
-        <iframe width="100%" height="300" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d631.1338198733573!2d-122.16176394869707!3d47.68433654688771!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x549012a13190dd03%3A0x2c8b6acdcc8b79a3!2sAmerican+Marketing!5e0!3m2!1sen!2sus!4v1491939434320" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <iframe width="100%" height="300" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2684.638480787228!2d-122.17293078400711!3d47.71085587919178!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54900d82d0ba1a65%3A0x88bcc8b6c9ac0d63!2s12700+NE+124th+St+%23204%2C+Kirkland%2C+WA+98034!5e0!3m2!1sen!2sus!4v1494986789896" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <!-- <iframe width="100%" height="300" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d631.1338198733573!2d-122.16176394869707!3d47.68433654688771!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x549012a13190dd03%3A0x2c8b6acdcc8b79a3!2sAmerican+Marketing!5e0!3m2!1sen!2sus!4v1491939434320" frameborder="0" style="border:0" allowfullscreen></iframe> -->
     </section>
     <section class="col-md-4">
         <p>D10 Signs</p>
-        <p>12700 NE 124th ST, Suite 204</p>
+        <p>12700 NE 124th ST, Ste 204 <br> Kirkland, WA 98034</p>
+        <!-- 12700 ne 124th st suite 204  Kirkland, WA 98034 -->
         <p>p | 425-828-0177</p>
         <p>f | 555-555-0555</p>
         <p>e | contact@d10signs.org</p>
