--- a/labels-printing.html
+++ b/labels-printing.html
@@ -66,7 +66,7 @@
             <div class="row">
                 <section class="labels-intro flex">
                     <section class="labels-heading"></section>
-                    <aside class="cta animated fadeInRight">Decals / Labels</aside>
+                    <aside class="cta animated fadeInRight">Decals / Labels <br> <button>More Info</button></aside>
 
                     <aside class="cta animated fadeInLeft">Wearables</aside>
                     <section class="wearables-heading"></section>
