--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
         <script src="https://use.fontawesome.com/9b071ecee5.js"></script>
         <!-- BOOTSTRAP CDN -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-        <!-- Optional theme -->
-        <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous"> -->
         <!-- Latest compiled and minified JavaScript -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
         <!-- GOOGLE FONTS -->
@@ -29,6 +27,12 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexslider/2.6.3/flexslider.min.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/flexslider/2.6.3/jquery.flexslider-min.js"></script>
         <!-- <script src="js/jquery.flexslider.js"></script> -->
+
+        <!-- jQuery Form Validator CDN -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.16.0/jquery.validate.min.js" type="text/javascript"></script>
+        <!-- additional-methods.min.js required for phoneUS validate option https://jqueryvalidation.org/phoneUS-method/ -->
+        <script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/additional-methods.min.js" type="text/javascript"></script>
+    
 
     </head>
 
@@ -48,10 +52,12 @@
 
                     <nav>
                         <ul class="nav-list-items">
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="about.html">About Us</a></li>
-                            <!-- <li>References</li> -->
-                            <li><a href="portfolio.html">Portfolio</a></li>
+                            <!-- <div class="break-mobile"> -->
+                                <li><a href="index.html">Home</a></li>
+                                <li><a href="about.html">About Us</a></li>
+                                <!-- <li>References</li> -->
+                                <li><a href="portfolio.html">Portfolio</a></li>
+                            <!-- </div> -->
                             <li><a href="labels-printing.html">Labels/Printing</a></li>
                             <!-- <li>Decorated Apparel</li> -->
                             <li class="contact-us"><a href="contact.html">Contact Us</a></li>
@@ -66,15 +72,15 @@
                 <section class="about hero"> <!-- Change class name, lives on home page now -->
                     <div class="intro-inner">
                         <div class="tint"></div>
-                        <div class="col-md-4">
+                        <div class="break-tablet col-md-4">
                             <h1 class="fadeIn1 animated slideInLeft">Excellent Customer Service</h1>
                             <h1 class="fadeIn2 animated slideInLeft">Prompt Responses</h1>
                         </div>
-                        <div class="col-md-4">
+                        <div class="break-tablet col-md-4">
                             <h1 class="fadeIn3 animated fadeIn">Competitive Pricing</h1>
-                            <h1 class="fadeIn4 animated fadeIn">Dependable Products and Services</h1>
+                            <h1 class="fadeIn4 animated fadeIn">Dependable Products</h1> <!-- omitted & Services -->
                         </div>
-                        <div class="col-md-4">
+                        <div class="break-tablet col-md-4">
                             <h1 class="fadeIn5 animated slideInRight">Experienced Sign Solutions</h1>
                             <h1 class="fadeIn6 animated slideInRight">Professional Installations</h1>
                        </div>
@@ -89,7 +95,7 @@
                 <h1 style="text-align: center;">Projects</h1>
                 <hr>
                     <!-- FLEXSLIDER randomize: true. Also added Quick fix in flexslider.css - line 93 -->
-                    <div class="flexslider" style="width: 800px; margin: 0 auto;"> <!-- inline style to adjust size of Flexslider -->
+                    <div class="flexslider">
                       <ul class="slides">
                         <li>
                           <img src="assets/img/kexp-wall.jpg" />
@@ -110,17 +116,17 @@
                 <section class="contact-form">
                     <H2>GET IN TOUCH</H2>
                     <p class="subtext">Request a quote</p>
-                    <div class="contact-form-inner">  
-                            <form id="contact" method="post">
-                                <fieldset>
-                                    <input name="name" placeholder="NAME*" required>
-                                    <input type="email" name="email" placeholder="EMAIL*" required>
-                                    <input type="tel" name="phone" placeholder="PHONE">
-                                    <textarea name="message" placeholder="YOUR MESSAGE*" id="" required></textarea>
-                                    <button id="contact-submit" name="submit" type="submit">SEND</button>
-                                </fieldset>
-                            </form>
-                      </form>
+                    <div class="contact-form-inner"> 
+                        <form id="contact" action="php/contact.php" method="post">
+                            <fieldset>
+                                <input type="text" name="name" placeholder="NAME*" required>
+                                <input type="email" name="email" placeholder="EMAIL*" required>
+                                <input type="tel" name="phone" placeholder="PHONE">
+                                <input type="text" name="subject" placeholder="SUBJECT*" required>
+                                <textarea name="message" placeholder="YOUR MESSAGE*" id="" required></textarea>
+                                <button id="contact-submit" name="submit" type="submit">SEND</button>
+                            </fieldset>
+                        </form>
                     </div>
                 </section>
 
@@ -128,7 +134,7 @@
 
                 <div class="row footer-row"> <!-- TODO: DELETE WHEN DEPLOYED! -->
                     <section class="footer"> <!-- TODO: Footer element is not containing iFrame content TODO: DELETE WHEN DEPLOYED! -->
-                        <section class="col-md-4">
+                        <section class="map col-md-4">
                             <iframe width="100%" height="300" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2684.638480787228!2d-122.17293078400711!3d47.71085587919178!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54900d82d0ba1a65%3A0x88bcc8b6c9ac0d63!2s12700+NE+124th+St+%23204%2C+Kirkland%2C+WA+98034!5e0!3m2!1sen!2sus!4v1494986789896" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
                             <!-- <iframe width="100%" height="300" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d631.1338198733573!2d-122.16176394869707!3d47.68433654688771!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x549012a13190dd03%3A0x2c8b6acdcc8b79a3!2sAmerican+Marketing!5e0!3m2!1sen!2sus!4v1491939434320" frameborder="0" style="border:0" allowfullscreen></iframe> -->
                         </section>
@@ -141,7 +147,7 @@
                             
                         </section>
                         <section class="social col-md-4">
-                            <i class="fa fa-envelope-o" aria-hidden="true"></i>
+                            <a href="mailto:brmendez@gmail.com?Subject=Marketing%20Site%20Contact" target="_top"><i class="fa fa-envelope-o" aria-hidden="true"></i> </a>
                             <i class="fa fa-facebook" aria-hidden="true"></i>
                         </section>
                         <section class="legal col-md-12">&copy; D10Signs | American Marketing</section>
