Site is now completey responsive. Almost ready for live deployment

--- a/header.html
+++ b/header.html
@@ -1,20 +1,22 @@
 <header>
+
     <div class="header-inner flex">
         <section class="brand">
-            <a href="index.html"><img src="assets/img/d10logocopy.png" alt="logo"></a>
+            <img src="assets/img/d10logocopy.png" alt="logo">
             <aside class="logo-text">
                 <h1>D10</h1>
                 <h3 style="font-weight: 300;">SIGNS AND GRAPHICS</h3>
             </aside>
-            
         </section>
 
         <nav>
             <ul class="nav-list-items">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <!-- <li>References</li> -->
-                <li><a href="portfolio.html">Portfolio</a></li>
+                <!-- <div class="break-mobile"> -->
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <!-- <li>References</li> -->
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                <!-- </div> -->
                 <li><a href="labels-printing.html">Labels/Printing</a></li>
                 <!-- <li>Decorated Apparel</li> -->
                 <li class="contact-us"><a href="contact.html">Contact Us</a></li>
@@ -22,4 +24,5 @@
         </nav>
 
     </div>
+
 </header>
