--- a/index.html
+++ b/index.html
@@ -40,32 +40,32 @@
         <div class="container-fluid">
             <div id="header"></div>
 
-            <header> <!-- TODO: DELETE WHEN DEPLOYED! -->
-                <div class="header-inner flex">
-                    <section class="brand">
-                        <img src="assets/img/d10logocopy.png" alt="logo">
-                        <aside class="logo-text">
-                            <h1>D10</h1>
-                            <h3 style="font-weight: 300;">SIGNS AND GRAPHICS</h3>
-                        </aside>
-                    </section>
+            <!-- <header> TODO: DELETE WHEN DEPLOYED! -->
+                <!-- <div class="header-inner flex"> -->
+                    <!-- <section class="brand"> -->
+                        <!-- <img src="assets/img/d10logocopy.png" alt="logo"> -->
+                        <!-- <aside class="logo-text"> -->
+                            <!-- <h1>D10</h1> -->
+                            <!-- <h3 style="font-weight: 300;">SIGNS AND GRAPHICS</h3> -->
+                        <!-- </aside> -->
+                    <!-- </section> -->
 
-                    <nav>
-                        <ul class="nav-list-items">
+                    <!-- <nav> -->
+                        <!-- <ul class="nav-list-items"> -->
                             <!-- <div class="break-mobile"> -->
-                                <li><a href="index.html">Home</a></li>
-                                <li><a href="about.html">About Us</a></li>
+                                <!-- <li><a href="index.html">Home</a></li> -->
+                                <!-- <li><a href="about.html">About Us</a></li> -->
                                 <!-- <li>References</li> -->
-                                <li><a href="portfolio.html">Portfolio</a></li>
+                                <!-- <li><a href="portfolio.html">Portfolio</a></li> -->
                             <!-- </div> -->
-                            <li><a href="labels-printing.html">Labels/Printing</a></li>
+                            <!-- <li><a href="labels-printing.html">Labels/Printing</a></li> -->
                             <!-- <li>Decorated Apparel</li> -->
-                            <li class="contact-us"><a href="contact.html">Contact Us</a></li>
-                        </ul>
-                    </nav>
+                            <!-- <li class="contact-us"><a href="contact.html">Contact Us</a></li> -->
+                        <!-- </ul> -->
+                    <!-- </nav> -->
 
-                </div>
-            </header> <!-- TODO: DELETE WHEN DEPLOYED! -->
+                <!-- </div> -->
+            <!-- </header> TODO: DELETE WHEN DEPLOYED! -->
 
             <div class="row">
 
@@ -112,6 +112,13 @@
                       </ul>
                     </div>
                 </section>
+
+
+                <form action="php/contact.php" method="post">
+                    Name: <input type="text" name="name"><br>
+                    E-mail: <input type="text" name="email"><br>
+                    <input type="submit">
+                </form>
             
                 <section class="contact-form">
                     <H2>GET IN TOUCH</H2>
@@ -131,28 +138,6 @@
                 </section>
 
                 <div class="row footer-row"></div>
-
-                <div class="row footer-row"> <!-- TODO: DELETE WHEN DEPLOYED! -->
-                    <section class="footer"> <!-- TODO: Footer element is not containing iFrame content TODO: DELETE WHEN DEPLOYED! -->
-                        <section class="map col-md-4">
-                            <iframe width="100%" height="300" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2684.638480787228!2d-122.17293078400711!3d47.71085587919178!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54900d82d0ba1a65%3A0x88bcc8b6c9ac0d63!2s12700+NE+124th+St+%23204%2C+Kirkland%2C+WA+98034!5e0!3m2!1sen!2sus!4v1494986789896" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-                            <!-- <iframe width="100%" height="300" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d631.1338198733573!2d-122.16176394869707!3d47.68433654688771!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x549012a13190dd03%3A0x2c8b6acdcc8b79a3!2sAmerican+Marketing!5e0!3m2!1sen!2sus!4v1491939434320" frameborder="0" style="border:0" allowfullscreen></iframe> -->
-                        </section>
-                        <section class="col-md-4">
-                            <p>D10 Signs</p>
-                            <p>12700 NE 124th ST, Suite 204</p>
-                            <p>p | 425-828-0177</p>
-                            <p>f | 555-555-0555</p>
-                            <p>e | contact@d10signs.org</p>
-                            
-                        </section>
-                        <section class="social col-md-4">
-                            <a href="mailto:brmendez@gmail.com?Subject=Marketing%20Site%20Contact" target="_top"><i class="fa fa-envelope-o" aria-hidden="true"></i> </a>
-                            <i class="fa fa-facebook" aria-hidden="true"></i>
-                        </section>
-                        <section class="legal col-md-12">&copy; D10Signs | American Marketing</section>
-                    </section>
-                </div> <!-- TODO: DELETE WHEN DEPLOYED! -->
 
             </div>
 
