--- a/contact.html
+++ b/contact.html
@@ -29,45 +29,44 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/flexslider/2.6.3/jquery.flexslider-min.js"></script>
         <!-- <script src="js/jquery.flexslider.js"></script> -->
 		<script src="https://www.google.com/recaptcha/api.js" async defer></script>
+        <!-- jQuery Form Validator CDN -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.16.0/jquery.validate.min.js" type="text/javascript"></script>
+        <!-- additional-methods.min.js required for phoneUS validate option https://jqueryvalidation.org/phoneUS-method/ -->
+        <script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/additional-methods.min.js" type="text/javascript"></script>
+
     </head>
 	<body>
 
         <div class="container-fluid">
             <div id="header"></div>
 
-            <header> <!-- TODO: DELETE WHEN DEPLOYED! -->
-                <div class="header-inner flex">
-                    <section class="brand">
-                        <img src="assets/img/d10logocopy.png" alt="logo">
-                        <aside class="logo-text">
-                            <h1>D10</h1>
-                            <h3 style="font-weight: 300;">SIGNS AND GRAPHICS</h3>
-                        </aside>
-                    </section>
+            <div class="row">
+                <section class="intro">
+                    <div class="intro-inner">
+                        <h1>Express Yourself</h1>
+                        <p class="subtext">D10 Signs and Graphics is your premier resource for signage, graphics, metal, and plastic fabrication installations.</p>
+                    </div>
+                </section>
 
-                    <nav>
-                        <ul class="nav-list-items">
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="about.html">About Us</a></li>
-                            <!-- <li>References</li> -->
-                            <li><a href="portfolio.html">Portfolio</a></li>
-                            <li><a href="labels-printing.html">Labels/Printing</a></li>
-                            <!-- <li>Decorated Apparel</li> -->
-                            <li class="contact-us"><a href="contact.html">Contact Us</a></li>
-                        </ul>
-                    </nav>
-
-                </div>
-            </header> <!-- TODO: DELETE WHEN DEPLOYED! -->
-
-            <section class="intro">
-                <div class="intro-inner">
-                    <h1>Express Yourself</h1>
-                    <p class="subtext">D10 Signs and Graphics is your premier resource for signage, graphics, metal, and plastic fabrication installations.</p>
-                </div>
-            </section>
+                <section class="contact-form">
+                    <H2>GET IN TOUCH</H2>
+                    <p class="subtext">Request a quote</p>
+                    <div class="contact-form-inner"> 
+                        <form id="contact" action="php/contact.php" method="post">
+                            <fieldset>
+                                <input type="text" name="name" placeholder="NAME*" required>
+                                <input type="email" name="email" placeholder="EMAIL*" required>
+                                <input type="tel" name="phone" placeholder="PHONE">
+                                <input type="text" name="subject" placeholder="SUBJECT*" required>
+                                <textarea name="message" placeholder="YOUR MESSAGE*" id="" required></textarea>
+                                <button id="contact-submit" name="submit" type="submit">SEND</button>
+                            </fieldset>
+                        </form>
+                    </div>
+                </section>
+            </div>
         
-            <section style="background-color: inherit;" class="contact-form contact-form-main">
+            <!-- <section style="background-color: inherit;" class="contact-form contact-form-main">
                 <H2>GET IN TOUCH</H2>
                 <p class="subtext">Request a quote</p>
                 <div class="contact-form-inner">  
@@ -82,30 +81,9 @@
                     </form>
                   </form>
                 </div>
-            </section>
+            </section> -->
 
             <div class="row footer-row"></div>
-
-            <div class="row footer-row"> <!-- TODO: DELETE WHEN DEPLOYED! -->
-                <section class="footer"> <!-- TODO: Footer element is not containing iFrame content TODO: DELETE WHEN DEPLOYED! -->
-                    <section class="col-md-4">
-                        <iframe width="100%" height="300" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d631.1338198733573!2d-122.16176394869707!3d47.68433654688771!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x549012a13190dd03%3A0x2c8b6acdcc8b79a3!2sAmerican+Marketing!5e0!3m2!1sen!2sus!4v1491939434320" frameborder="0" style="border:0" allowfullscreen></iframe>
-                    </section>
-                    <section class="col-md-4">
-                        <p>D10 Signs</p>
-                        <p>12700 NE 124th ST, Suite 204</p>
-                        <p>p | 425-828-0177</p>
-                        <p>f | 555-555-0555</p>
-                        <p>e | contact@d10signs.org</p>
-                        
-                    </section>
-                    <section class="social col-md-4">
-                        <i class="fa fa-envelope-o" aria-hidden="true"></i>
-                        <i class="fa fa-facebook" aria-hidden="true"></i>
-                    </section>
-                    <section class="legal col-md-12">&copy; D10Signs | American Marketing</section>
-                </section>
-            </div> <!-- TODO: DELETE WHEN DEPLOYED! -->
 
         </div>
 
