--- a/labels-printing.html
+++ b/labels-printing.html
@@ -24,9 +24,9 @@
         <link rel="stylesheet" href="css/stylesheet.css" type="text/css">
 
         <!-- FLEXSLIDER requires jQuery version 2.2.4. 3.2.1 is incompatible --> 
-        <script src="js/index.js"></script>
+        <script src="js/labels-printing.js"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/flexslider/2.6.3/jquery.flexslider-min.js"></script>
+        <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/flexslider/2.6.3/jquery.flexslider-min.js"></script> -->
         <!-- <script src="js/jquery.flexslider.js"></script> -->
 
     </head>
@@ -36,72 +36,34 @@
         <div class="container-fluid">
             <div id="header"></div>
 
-            <header> <!-- TODO: DELETE WHEN DEPLOYED! -->
-                <div class="header-inner flex">
-                    <section class="brand">
-                        <img src="assets/img/d10logocopy.png" alt="logo">
-                        <aside class="logo-text">
-                            <h1>D10</h1>
-                            <h3 style="font-weight: 300;">SIGNS AND GRAPHICS</h3>
-                        </aside>
-                    </section>
-
-                    <nav>
-                        <ul class="nav-list-items">
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="about.html">About Us</a></li>
-                            <!-- <li>References</li> -->
-                            <li><a href="portfolio.html">Portfolio</a></li>
-                            <li><a href="labels-printing.html">Labels/Printing</a></li>
-                            <!-- <li>Decorated Apparel</li> -->
-                            <li class="contact-us"><a href="contact.html">Contact Us</a></li>
-                        </ul>
-                    </nav>
-
-                </div>
-            </header> <!-- TODO: DELETE WHEN DEPLOYED! -->
-
             <!-- * Etched Metal Plates * Decals-Labels * Cast Bronze * Wearables * Signs * Promotional Items * Screen Printing * Graphics * -->
 
             <div class="row">
-                <section class="labels-intro flex">
-                    <section class="labels-heading"></section>
-                    <aside class="cta animated fadeInRight">Decals / Labels <br> <button>More Info</button></aside>
+                <section class="labels-intro">
+                    <section class="flex decals-inner">
+                        <section class="heading labels-heading"></section>
+                        <aside class="cta animated fadeInRight">Decals / Labels <hr style="display: none;"><!-- <button>More Info</button> --></aside>
+                    </section>
 
-                    <aside class="cta animated fadeInLeft">Wearables</aside>
-                    <section class="wearables-heading"></section>
+                    <section class="flex wearables-inner">
+                        <aside class="cta animated fadeInLeft">Wearables <hr style="display: none;"></aside>
+                        <section class="heading wearables-heading"></section>
+                    </section>
 
-                    <section class="bronze-heading"></section>
-                    <aside class="cta animated fadeInRight">Cast Bronze</aside>
+                    <section class="flex bronze-inner">
+                        <section class="heading bronze-heading"></section>
+                        <aside class="cta animated fadeInRight">Cast Bronze <hr style="display: none;"></aside>
+                    </section>
 
-                    <aside class="cta animated fadeInLeft">Trophies / Awards</aside>
-                    <section class="award-heading"></section>
+                    <section class="flex award-inner">
+                        <aside class="cta animated fadeInLeft">Trophies / Awards <hr style="display: none;"></aside>
+                        <section class="heading award-heading"></section>
+                    </section>
  
                 </section>
             </div>
 
             <div class="row footer-row"></div>
-
-            <div class="row footer-row"> <!-- TODO: DELETE WHEN DEPLOYED! -->
-                <section class="footer"> <!-- TODO: Footer element is not containing iFrame content TODO: DELETE WHEN DEPLOYED! -->
-                    <section class="col-md-4">
-                        <iframe width="100%" height="300" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d631.1338198733573!2d-122.16176394869707!3d47.68433654688771!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x549012a13190dd03%3A0x2c8b6acdcc8b79a3!2sAmerican+Marketing!5e0!3m2!1sen!2sus!4v1491939434320" frameborder="0" style="border:0" allowfullscreen></iframe>
-                    </section>
-                    <section class="col-md-4">
-                        <p>D10 Signs</p>
-                        <p>12700 NE 124th ST, Suite 204</p>
-                        <p>p | 425-828-0177</p>
-                        <p>f | 555-555-0555</p>
-                        <p>e | contact@d10signs.org</p>
-                        
-                    </section>
-                    <section class="social col-md-4">
-                        <i class="fa fa-envelope-o" aria-hidden="true"></i>
-                        <i class="fa fa-facebook" aria-hidden="true"></i>
-                    </section>
-                    <section class="legal col-md-12">&copy; D10Signs | American Marketing</section>
-                </section>
-            </div> <!-- TODO: DELETE WHEN DEPLOYED! -->
 
         </div>
 
