Marketing site pushed to production (GoDaddy webhost)

--- a/footer.html
+++ b/footer.html
@@ -12,7 +12,7 @@
         
     </section>
     <section class="social col-md-4">
-        <a href="mailto:brmendez@gmail.com?Subject=Marketing%20Site%20Contact" target="_top"><i class="fa fa-envelope-o" aria-hidden="true"></i> </a>
+        <a href="mailto:?Subject=Marketing%20Site%20Contact" target="_top"><i class="fa fa-envelope-o" aria-hidden="true"></i> </a>
         <i class="fa fa-facebook" aria-hidden="true"></i>
     </section>
     <section class="legal col-md-12">&copy; D10Signs | American Marketing</section>
