--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
         <meta name="author" content="name">
         <meta name="description" content="description here">
         <meta name="keywords" content="keywords,here">
-        <link rel="shortcut icon" href="assets/favicon/d10logo2.png" type="image/vnd.microsoft.icon"> <!-- Insert the right type -->
+        <link rel="shortcut icon" href="assets/favicon/d10logofav.png" type="image/vnd.microsoft.icon"> <!-- Insert the right type -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js" type="text/javascript"></script>
         <!-- FONT AWESOME CDN -->
         <script src="https://use.fontawesome.com/9b071ecee5.js"></script>
@@ -88,7 +88,13 @@
                     <hr>
                     <div class="picContainer">
                         <!-- <a class="ext-dim-gallery-main leftPic" href="assets/img/portfolio/ext-dim/lynwood-rec-center-extdim.jpg"></a> -->
-                        <a class="int-gallery-main leftPic" href="assets/img/jll-hallway.png"></a>
+                        <a class="int-gallery-main leftPic" href="assets/img/jll-hallway-1800-1350.jpg"></a>
+                        <!-- <a class="int-gallery-main leftPic" href="assets/img/interior-banner.jpg"></a> -->
+                        <!-- <section class="rightPics"> -->
+                        <!-- <a class="pic13 rightPic" href="assets/img/interior-banner.JPG"></a> -->
+                            <!-- <a class="stagger-gallery pic13 leftPic" href="assets/img/interior-banner.JPG"></a> -->
+                        <!-- </section> -->
+                        
                         <!-- <section class="rightPics">
                             <a class="pic1" href="assets/img/lotworks.jpg"></a>
                             <a class="pic2" href="assets/img/shorewood-hs-cropped.jpg"></a>
