--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
         <meta name="author" content="name">
         <meta name="description" content="description here">
         <meta name="keywords" content="keywords,here">
-        <link rel="shortcut icon" href="assets/favicon/d10logo2.png" type="image/vnd.microsoft.icon"> <!-- Insert the right type -->
+        <link rel="shortcut icon" href="assets/favicon/d10logofav.png" type="image/vnd.microsoft.icon"> <!-- Insert the right type -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js" type="text/javascript"></script>
         <!-- FONT AWESOME CDN -->
         <script src="https://use.fontawesome.com/9b071ecee5.js"></script>
