--- a/header.html
+++ b/header.html
@@ -12,14 +12,14 @@
         <nav>
             <ul class="nav-list-items">
                 <!-- <div class="break-mobile"> -->
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="about">About Us</a></li>
                     <!-- <li>References</li> -->
-                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="portfolio">Portfolio</a></li>
                 <!-- </div> -->
-                <li><a href="labels-printing.html">Labels/Printing</a></li>
+                <li><a href="labels-printing">Labels/Printing</a></li>
                 <!-- <li>Decorated Apparel</li> -->
-                <li class="contact-us"><a href="contact.html">Contact Us</a></li>
+                <li class="contact-us"><a href="contact">Contact Us</a></li>
             </ul>
         </nav>
 
