--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <title>D10 Signs and Graphics</title>
         <meta name="author" content="name">
-        <meta name="description" content="description here">
-        <meta name="keywords" content="keywords,here">
+        <meta property="og:image" content="assets/favicon/d10logofav.png"/>
+        <meta property="og:image:secure_url" content="https://d10signs.org/assets/favicon/d10logofav.png" />
+        <meta name="description" content="D10 SIGNS AND GRAPHICS IS YOUR PREMIER RESOURCE FOR SIGNAGE, GRAPHICS, METAL, AND PLASTIC FABRICATION INSTALLATIONS.">
+        <meta name="keywords" content="signs,signage,graphics,fabrication,etching,labels,installations">
         <link rel="shortcut icon" href="assets/favicon/d10logofav.png" type="image/vnd.microsoft.icon"> <!-- Insert the right type -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js" type="text/javascript"></script>
         <!-- FONT AWESOME CDN -->
@@ -32,7 +34,6 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.16.0/jquery.validate.min.js" type="text/javascript"></script>
         <!-- additional-methods.min.js required for phoneUS validate option https://jqueryvalidation.org/phoneUS-method/ -->
         <script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/additional-methods.min.js" type="text/javascript"></script>
-    
 
     </head>
 
