--- a/footer.html
+++ b/footer.html
@@ -4,16 +4,16 @@
         <!-- <iframe width="100%" height="300" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d631.1338198733573!2d-122.16176394869707!3d47.68433654688771!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x549012a13190dd03%3A0x2c8b6acdcc8b79a3!2sAmerican+Marketing!5e0!3m2!1sen!2sus!4v1491939434320" frameborder="0" style="border:0" allowfullscreen></iframe> -->
     </section>
     <section class="col-md-4">
-        <p>D10 Signs</p>
+        <p>D10 Signs and Graphics | A Division of American&nbsp;Marketing</p>
         <p>12700 NE 124th ST, Suite 204</p>
         <p>p | 425-828-0177</p>
-        <p>f | 555-555-0555</p>
-        <p>e | contact@d10signs.org</p>
+        <p>f | 425-814-4150</p>
+        <p>e | steve@d10signs.org</p>
         
     </section>
     <section class="social col-md-4">
-        <a href="mailto:?Subject=Marketing%20Site%20Contact" target="_top"><i class="fa fa-envelope-o" aria-hidden="true"></i> </a>
+        <a href="mailto:steve@d10signs.org?Subject=Marketing%20Site%20Contact" target="_top"><i class="fa fa-envelope-o" aria-hidden="true"></i> </a>
         <i class="fa fa-facebook" aria-hidden="true"></i>
     </section>
-    <section class="legal col-md-12">&copy; D10Signs | American Marketing</section>
+    <section class="legal col-md-12">&copy; 2017 D10 Signs and Graphics | A Division of American&nbsp;Marketing</section>
 </section>
