Added branding subtext and updated footer content

--- a/header.html
+++ b/header.html
@@ -6,6 +6,7 @@
             <aside class="logo-text">
                 <h1>D10</h1>
                 <h3 style="font-weight: 300;">SIGNS AND GRAPHICS</h3>
+                <p class="logo-subtext">A DIVISION OF AMERICAN MARKETING</p>
             </aside>
         </section>
 
