--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
                 <section class="about hero"> <!-- Change class name, lives on home page now -->
                     <div class="intro-inner">
-                        <div class="tint"></div>
+                        <div class="tint" style="background: rgba(0, 0, 0, .4);"></div>
                         <div class="break-tablet col-md-4">
                             <h1 class="fadeIn1 animated slideInLeft">Excellent Customer Service</h1>
                             <h1 class="fadeIn2 animated slideInLeft">Prompt Responses</h1>
