Updated meta tags. Added new brand logo. Restyled nav bar. Updated About Us verbiage

--- a/header.html
+++ b/header.html
@@ -1,17 +1,18 @@
 <header>
 
-    <div class="header-inner flex">
+    <div class="header-inner">
         <section class="brand">
-            <img src="assets/img/d10logocopy.png" alt="logo">
-            <aside class="logo-text">
-                <h1>D10</h1>
-                <h3 style="font-weight: 300;">SIGNS AND GRAPHICS</h3>
-                <p class="logo-subtext">A DIVISION OF AMERICAN MARKETING</p>
-            </aside>
+            <img class="logo" src="assets/img/d10logo.png" alt="logo">
+            <p class="logo-subtext">A DIVISION OF AMERICAN MARKETING</p>
+            <!-- <aside class="logo-text"> -->
+                <!-- <h1>D10</h1> -->
+                <!-- <h3 style="font-weight: 300;">SIGNS AND GRAPHICS</h3> -->
+                <!-- <p class="logo-subtext">A DIVISION OF AMERICAN MARKETING</p> -->
+            <!-- </aside> -->
         </section>
 
         <nav>
-            <ul class="nav-list-items">
+            <ul class="nav-list-items flex">
                 <!-- <div class="break-mobile"> -->
                     <li><a href="/">Home</a></li>
                     <li><a href="about">About Us</a></li>
@@ -20,7 +21,7 @@
                 <!-- </div> -->
                 <li><a href="labels-printing">Labels/Printing</a></li>
                 <!-- <li>Decorated Apparel</li> -->
-                <li class="contact-us"><a href="contact">Contact Us</a></li>
+                <!-- <li class="contact-us"><a href="contact">Contact Us</a></li> -->
             </ul>
         </nav>
 
