--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="author" content="name">
         <meta property="og:image" content="assets/favicon/d10logofav.png"/>
         <meta property="og:image:secure_url" content="https://d10signs.org/assets/favicon/d10logofav.png" />
-        <meta name="description" content="D10 SIGNS AND GRAPHICS IS YOUR PREMIER RESOURCE FOR SIGNAGE, GRAPHICS, METAL, AND PLASTIC FABRICATION INSTALLATIONS.">
+        <meta name="description" content="D10 Signs and Graphics is your premier resource for signage, graphics, metal, and plastic fabrication installations.">
         <meta name="keywords" content="signs,signage,graphics,fabrication,etching,labels,installations">
         <link rel="shortcut icon" href="assets/favicon/d10logofav.png" type="image/vnd.microsoft.icon"> <!-- Insert the right type -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js" type="text/javascript"></script>
@@ -39,6 +39,7 @@
 
     <body>
         <div class="container-fluid">
+
             <div id="header"></div>
 
             <!-- <header> TODO: DELETE WHEN DEPLOYED! -->
@@ -115,7 +116,7 @@
                 </section>
             
                 <section class="contact-form">
-                    <H2>GET IN TOUCH</H2>
+                    <!-- <H2>GET IN TOUCH</H2>
                     <p class="subtext">Request a quote</p>
                     <div class="contact-form-inner"> 
                         <form id="contact" action="php/contact.php" method="post">
@@ -128,8 +129,20 @@
                                 <button id="contact-submit" name="submit" type="submit">SEND</button>
                             </fieldset>
                         </form>
-                    </div>
+                    </div> -->
                 </section>
+
+<!--                 <form action="/gdform.php" method="post">
+                    <input type="hidden" name="subject" value="Form Submission" />
+                    <input type="hidden" name="redirect" value="thankyou.html" />
+                    <p>First Name:<input type="text" name="FirstName" /></p>
+
+                    <p>Last Name:<input type="text" name="LastName" /></p>
+                    <p>E-Mail:<input type="text" name="email" /></p>
+                    <p>Comments:<textarea name="comments" cols="40" rows="10"></textarea>
+
+                    <input type="submit" name="submit" value="submit"/>
+                </form> -->
 
                 <div class="row footer-row"></div>
 
