--- a/portfolio.html
+++ b/portfolio.html
@@ -5,8 +5,10 @@
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <title>D10 - Portfolio</title>
         <meta name="author" content="name">
-        <meta name="description" content="description here">
-        <meta name="keywords" content="keywords,here">
+        <meta property="og:image" content="assets/favicon/d10logofav.png"/>
+        <meta property="og:image:secure_url" content="https://d10signs.org/assets/favicon/d10logofav.png" />
+        <meta name="description" content="D10 Signs and Graphics is your premier resource for signage, graphics, metal, and plastic fabrication installations.">
+        <meta name="keywords" content="signs,signage,graphics,fabrication,etching,labels,installations">
         <link rel="shortcut icon" href="assets/favicon/d10logofav.png" type="image/vnd.microsoft.icon"> <!-- Insert the right type -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js" type="text/javascript"></script>
         <!-- FONT AWESOME CDN -->
